# taraffic-vm

./: Cargo.toml  README.md
benches/: basic_benchmark.rs
src/: README.md  lib.rs  main.rs  shared.rs  tpl.md
src/rgal/: mod.rs  no_operands.rs  reg_opcode.rs  reg_reg_opcodes.rs  reg_reg_value_opcodes.rs  reg_value_opcodes.rs  reg_value_reg_opcodes.rs  reg_value_value_opcodes.rs  rgal.md  rgal.pest  value_opcodes.rs  value_reg_opcodes.rs  value_reg_value_opcodes.rs  value_value_opcodes.rs  value_value_reg.rs
src/tps/: mod.rs  no_operands.rs  reg_opcode.rs  reg_reg_opcodes.rs  reg_reg_value_opcodes.rs  reg_value_opcodes.rs  reg_value_reg_opcodes.rs  reg_value_value_opcodes.rs  tpl.pest  value_opcodes.rs  value_reg_opcodes.rs  value_reg_value_opcodes.rs  value_value_opcodes.rs  value_value_reg.rs
src/tpu/: alu.rs  alu_test.rs  decoder.rs  execution.rs  flow.rs  flow_test.rs  io_matrix.rs  io_matrix_test.rs  mmu.rs  mmu_test.rs  mod.rs  tpu_test.rs
src/tpu/alu/: alu_test.rs  decode.rs  mod.rs
src/tpu/flow/: decode.rs  flow_test.rs  mod.rs
src/tpu/io_matrix/: decode.rs  io_matrix_test.rs  mod.rs
src/tpu/mmu/: decode.rs  mmu_test.rs  mod.rs
tls-derive/: Cargo.toml
tls-derive/src/: lib.rs
